samples/_failures_safe/1761434099_26b2c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_281e393a.c: In function ‘main’:
./samples/SAFE/__tmp_281e393a.c:136:41: error: missing terminating " character
  136 |     display_entries_by_level(&analyzer, "
      |                                         ^
./samples/SAFE/__tmp_281e393a.c:136:5: error: expected expression at end of input
  136 |     display_entries_by_level(&analyzer, "
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_281e393a.c:136:5: error: expected declaration or statement at end of input
